fix(errorprone): address warnings after plugin update (#936)
* fix(parsing): use explicit locale/charset

* fix(util): clarify Base32 bit ops

* fix(sevenzip): clean up control flow

* fix(bitpedia): simplify checks

* fix(util): use ArrayDeque for nodes

* fix(errorprone): reduce warnings across core and mantissa

Align overrides, locale usage, and type checks to keep diagnostics clean without behavior changes.

* fix(node): clean up startup warning sites

Tighten guard checks, mkdir conditions, and loopback resolution to satisfy Error Prone without behavior changes.

* fix(node): avoid reference equality

Use value equality for routed reject specs and peer source matching to align with error-prone guidance.

* fix(errorprone): avoid enum ordinals

Use explicit compatibility codes and status ordering without ordinal reliance in client and FCP serialization paths.

* fix(errorprone): tame JavaUtilDate warnings

Use java.time for alert feed timestamps and suppress legacy Date usage where APIs still require it.

* fix(node): clean up tag warnings

Tighten request tag comparisons and update UIDTag Javadocs to satisfy Error Prone without behavior changes.

* fix(node): reduce RequestSender warnings

Use value equality for message specs, add overrides, and simplify conditionals to satisfy Error Prone guidance.

* fix(node): stabilize opennet reason codes

Introduce explicit ConnectionType codes and use value equality for opennet completion messages to avoid ordinal reliance.

* fix(core): avoid fragile identity and ordinal comparisons

* fix(errorprone): reduce warning noise in tracking and messaging

* fix(errorprone): streamline message handling and node checks

* fix(errorprone): simplify filter waits and offer sets

* fix(errorprone): clarify message type equality and darknet checks

* fix(errorprone): simplify opennet and USK checks

* fix(errorprone): simplify key reuse and update alert checks

* fix(errorprone): streamline config filtering and discard timeouts

* 